WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
146180
WKApplicationCacheManagerDeleteEntriesForOrigin() has wrong WebsiteDataTypes
https://bugs.webkit.org/show_bug.cgi?id=146180
Summary
WKApplicationCacheManagerDeleteEntriesForOrigin() has wrong WebsiteDataTypes
Hyungwook Lee
Reported
2015-06-20 00:34:15 PDT
WKApplicationCacheManagerDeleteEntriesForOrigin() uses WebsiteDataTypes::WebsiteDataTypeIndexedDBDatabases type internally.
Attachments
Patch
(1.67 KB, patch)
2015-06-20 00:39 PDT
,
Hyungwook Lee
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Hyungwook Lee
Comment 1
2015-06-20 00:39:07 PDT
Created
attachment 255285
[details]
Patch
Sam Weinig
Comment 2
2015-06-20 19:53:44 PDT
Comment on
attachment 255285
[details]
Patch Great catch. We really need tests for this stuff :(.
WebKit Commit Bot
Comment 3
2015-06-21 21:48:50 PDT
Comment on
attachment 255285
[details]
Patch Clearing flags on attachment: 255285 Committed
r185817
: <
http://trac.webkit.org/changeset/185817
>
WebKit Commit Bot
Comment 4
2015-06-21 21:48:53 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug