WKApplicationCacheManagerDeleteEntriesForOrigin() has wrong WebsiteDataTypes. https://bugs.webkit.org/show_bug.cgi?id=146180

Patch by Hyungwook Lee <hyungwook.lee@navercorp.com> on 2015-06-21
Reviewed by Sam Weinig.

Modify to use correct WebsiteDataTypes in WKApplicationCacheManagerDeleteEntriesForOrigin()

* UIProcess/API/C/WKApplicationCacheManager.cpp:
(WKApplicationCacheManagerDeleteEntriesForOrigin):

Canonical link: https://commits.webkit.org/164260@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185817 268f45cc-cd09-0410-ab3c-d52691b4dbfc